# 2024FreeViewingMSCOCO

./: .gitignore  README.md  project_2024FreeViewingMSCOCO.toml  pyproject.toml  requirements.txt
.github/workflows/: forms.yml
assets/: README.md  mapping file and cap size chart.odt  mapping-file.odt  template-labnotebook.tsv  template-participantform.tsv
assets/images/: experiment_images_info.csv  experiment_images_info_pilot.csv  experiment_images_info_test23imgs.csv  practise_images_info.csv  practise_images_info_five_images.csv
experiment/: README.md  environment.yaml  exp-startup  free_viewing_experiment.osexp  startup-opensesame
notebooks/: nb_2024-08-06_pilotUnfoldAnalysis.jl
scripts/: README.md  calculate_number_missing_trials.py  exp-startup  inspect_preproc.ipynb  inspect_raw_data.ipynb  startup-opensesame
scripts/data_curation/: README.md  adapt_filename_in_tsv.py  generate_missing_data_overview.py  unify_filenames_task.sh
scripts/et_preprocessing/: ET_Data_Plotting.ipynb  config.py  main.py  plotting.py  preprocessing.py  report.py
scripts/preprocessing/: extract_preprocessed_data.py  mne_bids_pipeline_config.py
